fix: smaller Card row gap

--- a/KanbanGame/Client/Pages/Components/FeatureInfoCard.razor.css
+++ b/KanbanGame/Client/Pages/Components/FeatureInfoCard.razor.css
@@ -1,7 +1,7 @@
 .feature-tasks-card {  
     display: grid;
     grid-template-columns: 1fr 5fr;
-    gap: 10px 10px;
+    gap: 5px 5px;
     grid-auto-flow: row;
     grid-template-areas:
         "h h"
@@ -19,6 +19,7 @@
     justify-content: space-between;
     font-weight: bold;
     font-size: 20px;
+    line-height: 2ch;
 }
 
 .feature-tasks-e { 
